--- a/views/calendariodevigencias.ejs
+++ b/views/calendariodevigencias.ejs
@@ -37,7 +37,7 @@
       <div class="tab-content active" id="tabMounthermon">
         <div class="operadoras" id="mounthermon">
           <% for (let i=0; i < operadoras.length; i++) { %>
-            <% if ( operadoras[i].administradora==='Mount Hermon' ) { %>
+            <% if (operadoras[i].administradora === 'Mount Hermon' && operadoras[i].vigencias.length > 0 && operadoras[i].fechamentos.length > 0) { %>
               <div class="checkbox-card">
                 <input type="checkbox" id="<%= operadoras[i].nome %>" name="operadoras[]"
                   value="<%= operadoras[i].nome %>">
@@ -52,7 +52,7 @@
       <div class="tab-content" id="tabCompar">
         <div class="operadoras" id="compar">
           <% for (let i=0; i < operadoras.length; i++) { %>
-            <% if ( operadoras[i].administradora==='Compar' ) { %>
+            <% if (operadoras[i].administradora === 'Compar' && operadoras[i].vigencias.length > 0 && operadoras[i].fechamentos.length > 0) { %>
               <div class="checkbox-card">
                 <input type="checkbox" id="<%= operadoras[i].nome %>" name="operadoras[]"
                   value="<%= operadoras[i].nome %>">
@@ -67,7 +67,7 @@
       <div class="tab-content" id="tabClasse">
         <div class="operadoras" id="classe">
           <% for (let i=0; i < operadoras.length; i++) { %>
-            <% if ( operadoras[i].administradora==='Classe Administradora' ) { %>
+            <% if (operadoras[i].administradora === 'Classe Administradora' && operadoras[i].vigencias.length > 0 && operadoras[i].fechamentos.length > 0) { %>
               <div class="checkbox-card">
                 <input type="checkbox" id="<%= operadoras[i].nome %>" name="operadoras[]"
                   value="<%= operadoras[i].nome %>">
@@ -119,6 +119,7 @@
         </thead>
         <tbody>
           <% for (let i=0; i < operadoras.length; i++) { %>
+            <% if (operadoras[i].vigencias.length > 0 && operadoras[i].fechamentos.length > 0) { %>
             <tr scope="row" class="operadora-table table" data-operadora="<%= operadoras[i].nome %>"
               data-administradora="<%= operadoras[i].administradora %>" data-id="<%= operadoras[i].id %>">
               <td scope="col" class="col-1">
@@ -145,6 +146,7 @@
                 <%= operadoras[i].areaAtuacao %> <!-- Alterado para exibir a "Área de Atuação" -->
               </td>
             </tr>
+            <% } %>
             <% } %>
         </tbody>
       </table>
