--- a/views/vigencias.ejs
+++ b/views/vigencias.ejs
@@ -25,6 +25,12 @@
     <div class="navbardiv"> 
         <%- include('navbar') %>
     </div>
+    <div class="alert alert-success alert-dismissible fade show fixed-top" role="alert" id="Message" style="display:none">
+        Sucesso!
+      </div>
+      <div class="alert alert-danger alert-dismissible fade show fixed-top" role="alert" id="MessageError" style="display:none">
+        Erro!
+      </div>
         <div class="content">
             <h1>Alteração de Vigências / Fechamentos</h1>
             <table class="table">
