--- a/views/operadoras.ejs
+++ b/views/operadoras.ejs
@@ -37,8 +37,8 @@
                         <th scope="col">Logo</th>
                         <th scope="col">Nome</th>
                         <th scope="col">Administradora</th>
-                        <th scope="col">Abrangência</th>
-                        <th scope="col">Área de Atuação</th>
+                        <th scope="col">Região</th> <!-- Antiga Abrangência -->
+                        <th scope="col">Link</th> <!-- Antiga Area de atuação -->
                         <th scope="col">Ações</th>
                     </tr>
                 </thead>
