--- a/views/vigencias.ejs
+++ b/views/vigencias.ejs
@@ -58,11 +58,11 @@
                                         <table class="table table-borderless">
                                             <tr>
                                                 <td>
-                                                    <input type="text" class="vigencia-input form-control"
+                                                    <input type="date" class="vigencia-input form-control"
                                                         value="<%= operadoras[i].vigencias[j] %>">
                                                 </td>
                                                 <td>
-                                                    <input type="text" class="fechamento-input form-control"
+                                                    <input type="date" class="fechamento-input form-control"
                                                         value="<%= operadoras[i].fechamentos[j] %>">
                                                 </td>
                                                 <td>
