Commit 24/07 - 16:00 - Alterado cor botão de abrir manual

--- a/views/calendariodevigencias.ejs
+++ b/views/calendariodevigencias.ejs
@@ -13,7 +13,7 @@
   <script src="/bootstrap/js/bootstrap.bundle.min.js"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500;800&display=swap" rel="stylesheet">
 
 
 
@@ -168,7 +168,7 @@
               
               
               <td class="col-4">
-                <a href="<%= operadoras[i].areaAtuacao %>" target="_blank"><button class="btn btn-info"><i class="bi bi-download"></i> Abrir</button></a> <!-- Alterado para exibir a "Área de Atuação" -->
+                <a href="<%= operadoras[i].areaAtuacao %>" target="_blank"><button class="btn btn-info btn-abrir"><i class="bi bi-download"></i> Abrir</button></a> <!-- Alterado para exibir a "Área de Atuação" -->
               </td>
             </tr>
             <% } %>
