--- a/css/calendario.css
+++ b/css/calendario.css
@@ -432,7 +432,7 @@ th {
 
 th, td {
     text-align: center;
-    font-weight: 500;
+    font-weight: 600;
 }
 
 .vazio {
@@ -523,6 +523,12 @@ th, td {
     background: linear-gradient(to right, #BF7D2A, #ED7923, #2BB3B1);
     width: 100%;
     height: 10px;
+}
+
+table .btn-abrir{
+    background-color: var(--main-color);
+    color: var(--gray-100);
+    font-weight: 500;
 }
 
 @media print {
