--- a/views/calendariodevigencias.ejs
+++ b/views/calendariodevigencias.ejs
@@ -124,7 +124,9 @@
             <tr scope="row" class="operadora-table table" data-operadora="<%= operadoras[i].nome %>"
               data-administradora="<%= operadoras[i].administradora %>" data-id="<%= operadoras[i].id %>">
               <td scope="col" class="col-1">
-                <img class="img-fluid rounded" src="<%= operadoras[i].logo %>">
+                <div class="img-container">
+                  <img class="img-fluid" src="<%= operadoras[i].logo %>">
+                </div>
               </td>
               <td class="col-4">
                 <%= operadoras[i].abrangencia %>
@@ -163,12 +165,10 @@
                   </table>
                 <% } %>
               </td>
-              
-              
-              
-              
               <td class="col-4">
-                <a href="<%= operadoras[i].areaAtuacao %>" target="_blank"><button class="btn btn-info btn-abrir"><i class="bi bi-download"></i> Abrir</button></a> <!-- Alterado para exibir a "Área de Atuação" -->
+                <% if (operadoras[i].areaAtuacao) { %>
+                  <a href="<%= operadoras[i].areaAtuacao %>" target="_blank"><button class="btn btn-info btn-abrir"><i class="bi bi-download"></i> Abrir</button></a>
+                <% } %>
               </td>
             </tr>
             <% } %>
