Inclusão de dados de horário tbm na edição das vigências e no resultado

--- a/views/vigencias.ejs
+++ b/views/vigencias.ejs
@@ -62,7 +62,7 @@
                                                         value="<%= operadoras[i].vigencias[j] %>">
                                                 </td>
                                                 <td>
-                                                    <input type="date" class="fechamento-input form-control"
+                                                    <input type="datetime-local" class="fechamento-input form-control"
                                                         value="<%= operadoras[i].fechamentos[j] %>">
                                                 </td>
                                                 <td>
