--- a/views/calendariodevigencias.ejs
+++ b/views/calendariodevigencias.ejs
@@ -154,16 +154,13 @@
                           <% } %>
                         </td>
                         <td class="px-2">
-                          <% // Check if the date data for fechamentos is present before formatting and rendering %>
                           <% if (operadoras[i].fechamentos[j]) { %>
-                            <% // Convert the date string to a Date object for fechamentos %>
                             <% const fechamentoDate = new Date(operadoras[i].fechamentos[j]); %>
-                            <% // Get the day, month, and year separately %>
                             <% const fechamentoDay = String(fechamentoDate.getDate()).padStart(2, '0'); %>
                             <% const fechamentoMonth = String(fechamentoDate.getMonth() + 1).padStart(2, '0'); %>
                             <% const fechamentoYear = String(fechamentoDate.getFullYear()).slice(-2); %>
-                            <% // Create the formatted date string in the desired format for fechamentos %>
-                            <%= `${fechamentoDay}-${fechamentoMonth}-${fechamentoYear}` %>
+                            <% const fechamentoTime = fechamentoDate.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' }); %>
+                            <%= `${fechamentoDay}-${fechamentoMonth}-${fechamentoYear} até às ${fechamentoTime}` %>
                           <% } %>
                         </td>
                       </tr>
